Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

Under development

    Features added

      - Old version cleanup code was made more robust and can now be
        used to delete all old versions older than a certain date, 
        instead of just all old versions. 

      - Silva now uses ZCML for registration of Silva extensions and
        the content types they define. See doc/extension.txt for more
        information. See also doc/developer_changes.txt.

      - The Version/CatalogedVersion base class does not expect a
        title argument anymore. This title argument had been unused
        for a long time. This requires minor adjustments in some subclasses
        of Version and CatalogedVersion. For more information see
        doc/developer_changes.txt.

      - Much i18n polishing.

      - Made image titles required, since they provide the alt attribute.

      - Added adapters so we now have a simple API to index, unindex
        and reindex content objects, folders and assets. Adapt to
        Products.Silva.adapters.ICatalogIndexable.

      - Moved document info in the document status screen to an info column 
        like assets have.

      - Refactored/cleaned up tab_status_macros to remove code duplication.

      - Changed the add screens for Files and Images so the upload (file) field
        comes first, followed by a subhead 'optional fields', because Authors
        were not seeing the tip that they don't have to fill in an id.
    
      - Added a more discreet favicon for the public views.

      - For the frontend,css that gets placed in the ZMI, import the 
        frontend.css in globals to stop duplication but still give the end user
        the option to edit the preview typography.
      
      - Clarified descriptions of exporting versions.

      - Added the possibility of using silva lookup to filter on multiple 
        meta-types.
    